# Tine

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  App.js  App.tsx  HOWTO.txt  README.md  app.json  babel.config.js  eslint.config.js  index.js  jest.config.js  jest.setup.ts  package-lock.json  package.json  tine-fixes.patch  tsconfig.json
.debug/: env.txt  expo.config.normalized.json
.github/workflows/: ci.yml
Resources/: human_hearing_notes_20Hz_to_20kHz_boundaries.csv
__mocks__/: react-native-gesture-handler.tsx
__mocks__/@shopify/: react-native-skia.tsx
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  PitchDetector.cpp
assets/: README.md
docs/: APP_OVERVIEW.md  Android Deployment Guide.md  DEPLOYMENT_PLAN.md  PHASE1_VALIDATION.md  Requirements.md  Web Deployment Guide.md  audio-stack-migration.md  iOS Deployment Guide.md  mission-vision-values.md  mobile-deployment-guide.md  native-audio-integration.md  performance-monitoring.md  user-experience.md
ios/: PitchDetector.h  PitchDetector.mm  Podfile  TineTurboModuleProvider.mm
ios/Tine/: PitchDetectorModule.h  PitchDetectorModule.mm
ios/Tine.xcodeproj/: project.pbxproj
ios/Tine.xcworkspace/: contents.xcworkspacedata
native/android/: AudioRecordStub.kt
native/cpp/: FloatRingBuffer.hpp  YinPitchDetector.cpp  YinPitchDetector.hpp
native/ios/: AudioEngineStub.swift
src/: README.md  theme.ts
src/components/: DebugLogOverlay.tsx  IndexIndicator.tsx  InnerWheel.tsx  InteractiveOrb.tsx  (+7 more)
(+46 files in other folders)
